# rustmail

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  edit.txt
.purity/: settings.json
migrations/2022-08-01-045711_create_mails/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/match/: body_plain.rs
src/routes/: create.rs  delete.rs  read.rs  regex.rs  update.rs
