[package]
name = "rustmail"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
regex = "1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
# tokio = {version = "1", features = ["full"]}
[dependencies.rocket]
features = ["json"]
version = "0.5.0-rc.1"


#serde_derive = "1.0"
#serde_json = "1.0"
#tester = "0.9.0"
